--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-camera",
+  "name": "react-native-camera-stonehiy",
   "description": "A Camera component for React Native. Also reads barcodes.",
-  "version": "4.2.1",
+  "version": "4.2.2",
   "author": "Lochlan Wansbrough <lochie@live.com> (http://lwansbrough.com)",
   "collective": {
     "type": "opencollective",
@@ -39,7 +39,7 @@
     "react-native": "0.63.2",
     "semantic-release": "^17.1.1"
   },
-  "homepage": "https://github.com/react-native-community/react-native-camera",
+  "homepage": "https://github.com/stonehiy/react-native-camera",
   "keywords": [
     "barcode",
     "camera",
@@ -70,7 +70,7 @@
   "pre-commit": "lint:staged",
   "repository": {
     "type": "git",
-    "url": "https://github.com/react-native-community/react-native-camera.git"
+    "url": "https://github.com/stonehiy/react-native-camera"
   },
   "scripts": {
     "commit": "git-cz",
